parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     external_declaration -> INCLUDE LT ID include_endings
Rule 6     include_endings -> DOT GT
Rule 7     include_endings -> GT
Rule 8     function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 9     function_definition -> declarator declaration_list compound_statement
Rule 10    function_definition -> declarator compound_statement
Rule 11    function_definition -> declaration_specifiers declarator compound_statement
Rule 12    declaration -> declaration_specifiers init_declarator_list SEMI
Rule 13    declaration -> declaration_specifiers SEMI
Rule 14    declaration_list -> declaration
Rule 15    declaration_list -> declaration_list declaration
Rule 16    declaration_specifiers -> type_specifier declaration_specifiers
Rule 17    declaration_specifiers -> type_specifier
Rule 18    type_specifier -> VOID
Rule 19    type_specifier -> INT
Rule 20    type_specifier -> TYPEID
Rule 21    init_declarator_list -> init_declarator
Rule 22    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 23    init_declarator -> declarator
Rule 24    init_declarator -> declarator EQUALS initializer
Rule 25    specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 26    specifier_qualifier_list -> type_specifier
Rule 27    declarator -> direct_declarator
Rule 28    direct_declarator -> ID
Rule 29    direct_declarator -> LPAREN declarator RPAREN
Rule 30    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 31    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 32    direct_declarator -> direct_declarator LPAREN identifier_list RPAREN
Rule 33    direct_declarator -> direct_declarator LPAREN RPAREN
Rule 34    parameter_type_list -> parameter_list
Rule 35    parameter_list -> parameter_declaration
Rule 36    parameter_list -> parameter_list COMMA parameter_declaration
Rule 37    parameter_declaration -> declaration_specifiers declarator
Rule 38    parameter_declaration -> declaration_specifiers abstract_declarator_opt
Rule 39    identifier_list -> ID
Rule 40    identifier_list -> identifier_list COMMA ID
Rule 41    initializer -> assignment_expression
Rule 42    initializer -> LBRACE initializer_list RBRACE
Rule 43    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 44    initializer_list -> initializer
Rule 45    initializer_list -> initializer_list COMMA initializer
Rule 46    type_name -> specifier_qualifier_list abstract_declarator_opt
Rule 47    abstract_declarator_opt -> empty
Rule 48    abstract_declarator_opt -> abstract_declarator
Rule 49    abstract_declarator -> direct_abstract_declarator
Rule 50    direct_abstract_declarator -> LPAREN abstract_declarator RPAREN
Rule 51    direct_abstract_declarator -> direct_abstract_declarator LBRACKET constant_expression_opt RBRACKET
Rule 52    direct_abstract_declarator -> LBRACKET constant_expression_opt RBRACKET
Rule 53    direct_abstract_declarator -> direct_abstract_declarator LPAREN parameter_type_list_opt RPAREN
Rule 54    direct_abstract_declarator -> LPAREN parameter_type_list_opt RPAREN
Rule 55    constant_expression_opt -> empty
Rule 56    constant_expression_opt -> constant_expression
Rule 57    parameter_type_list_opt -> empty
Rule 58    parameter_type_list_opt -> parameter_type_list
Rule 59    statement -> expression_statement
Rule 60    statement -> compound_statement
Rule 61    statement -> selection_statement
Rule 62    statement -> iteration_statement
Rule 63    statement -> jump_statement
Rule 64    expression_statement -> expression_opt SEMI
Rule 65    compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 66    compound_statement -> LBRACE statement_list RBRACE
Rule 67    compound_statement -> LBRACE declaration_list RBRACE
Rule 68    compound_statement -> LBRACE RBRACE
Rule 69    statement_list -> statement
Rule 70    statement_list -> statement_list statement
Rule 71    selection_statement -> IF LPAREN expression RPAREN statement
Rule 72    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 73    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 74    iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 75    jump_statement -> BREAK SEMI
Rule 76    jump_statement -> RETURN expression_opt SEMI
Rule 77    expression_opt -> empty
Rule 78    expression_opt -> expression
Rule 79    expression -> assignment_expression
Rule 80    expression -> expression COMMA assignment_expression
Rule 81    assignment_expression -> conditional_expression
Rule 82    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 83    assignment_operator -> EQUALS
Rule 84    conditional_expression -> logical_or_expression
Rule 85    constant_expression -> conditional_expression
Rule 86    logical_or_expression -> logical_and_expression
Rule 87    logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 88    logical_and_expression -> inclusive_or_expression
Rule 89    logical_and_expression -> logical_and_expression LAND inclusive_or_expression
Rule 90    inclusive_or_expression -> exclusive_or_expression
Rule 91    inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 92    exclusive_or_expression -> and_expression
Rule 93    and_expression -> equality_expression
Rule 94    and_expression -> and_expression AND equality_expression
Rule 95    equality_expression -> relational_expression
Rule 96    equality_expression -> equality_expression EQ relational_expression
Rule 97    relational_expression -> shift_expression
Rule 98    relational_expression -> relational_expression LT shift_expression
Rule 99    relational_expression -> relational_expression GT shift_expression
Rule 100   relational_expression -> relational_expression LE shift_expression
Rule 101   relational_expression -> relational_expression GE shift_expression
Rule 102   shift_expression -> additive_expression
Rule 103   shift_expression -> shift_expression LSHIFT additive_expression
Rule 104   shift_expression -> shift_expression RSHIFT additive_expression
Rule 105   additive_expression -> multiplicative_expression
Rule 106   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 107   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 108   multiplicative_expression -> cast_expression
Rule 109   multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 110   multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 111   multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 112   cast_expression -> unary_expression
Rule 113   cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 114   unary_expression -> postfix_expression
Rule 115   unary_expression -> PLUSPLUS unary_expression
Rule 116   unary_expression -> MINUSMINUS unary_expression
Rule 117   unary_expression -> unary_operator cast_expression
Rule 118   unary_operator -> AND
Rule 119   unary_operator -> TIMES
Rule 120   unary_operator -> PLUS
Rule 121   unary_operator -> MINUS
Rule 122   unary_operator -> LNOT
Rule 123   postfix_expression -> primary_expression
Rule 124   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 125   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 126   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 127   postfix_expression -> postfix_expression PLUSPLUS
Rule 128   postfix_expression -> postfix_expression MINUSMINUS
Rule 129   primary_expression -> constant
Rule 130   primary_expression -> SCONST
Rule 131   primary_expression -> ID function_call
Rule 132   primary_expression -> LPAREN expression RPAREN
Rule 133   primary_expression -> LPAREN RPAREN
Rule 134   function_call -> function_call2
Rule 135   function_call -> empty
Rule 136   function_call2 -> LPAREN expression RPAREN
Rule 137   function_call2 -> LPAREN RPAREN
Rule 138   argument_expression_list -> assignment_expression
Rule 139   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 140   constant -> ICONST
Rule 141   constant -> FCONST
Rule 142   constant -> CCONST
Rule 143   empty -> <empty>

Terminals, with rules where they appear

AND                  : 94 118
BREAK                : 75
CCONST               : 142
COMMA                : 22 36 40 43 45 80 139
DIVIDE               : 110
DOT                  : 6
ELSE                 : 72
EQ                   : 96
EQUALS               : 24 83
FCONST               : 141
FOR                  : 74
GE                   : 101
GT                   : 6 7 99
ICONST               : 140
ID                   : 5 28 39 40 131
IF                   : 71 72
INCLUDE              : 5
INT                  : 19
LAND                 : 89
LBRACE               : 42 43 65 66 67 68
LBRACKET             : 30 51 52 124
LE                   : 100
LNOT                 : 122
LOR                  : 87
LPAREN               : 29 31 32 33 50 53 54 71 72 73 74 113 125 126 132 133 136 137
LSHIFT               : 103
LT                   : 5 98
MINUS                : 107 121
MINUSMINUS           : 116 128
MOD                  : 111
OR                   : 91
PLUS                 : 106 120
PLUSPLUS             : 115 127
RBRACE               : 42 43 65 66 67 68
RBRACKET             : 30 51 52 124
RETURN               : 76
RPAREN               : 29 31 32 33 50 53 54 71 72 73 74 113 125 126 132 133 136 137
RSHIFT               : 104
SCONST               : 130
SEMI                 : 12 13 64 74 74 75 76
TIMES                : 109 119
TYPEID               : 20
VOID                 : 18
WHILE                : 73
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 48 50
abstract_declarator_opt : 38 46
additive_expression  : 102 103 104 106 107
and_expression       : 92 94
argument_expression_list : 125 139
assignment_expression : 41 79 80 82 138 139
assignment_operator  : 82
cast_expression      : 108 109 110 111 113 117
compound_statement   : 8 9 10 11 60
conditional_expression : 81 85
constant             : 129
constant_expression  : 56
constant_expression_opt : 30 51 52
declaration          : 4 14 15
declaration_list     : 8 9 15 65 67
declaration_specifiers : 8 11 12 13 16 37 38
declarator           : 8 9 10 11 23 24 29 37
direct_abstract_declarator : 49 51 53
direct_declarator    : 27 30 31 32 33
empty                : 47 55 57 77 135
equality_expression  : 93 94 96
exclusive_or_expression : 90 91
expression           : 71 72 73 78 80 124 132 136
expression_opt       : 64 74 74 74 76
expression_statement : 59
external_declaration : 1 2
function_call        : 131
function_call2       : 134
function_definition  : 3
identifier_list      : 32 40
include_endings      : 5
inclusive_or_expression : 88 89 91
init_declarator      : 21 22
init_declarator_list : 12 22
initializer          : 24 44 45
initializer_list     : 42 43 45
iteration_statement  : 62
jump_statement       : 63
logical_and_expression : 86 87 89
logical_or_expression : 84 87
multiplicative_expression : 105 106 107 109 110 111
parameter_declaration : 35 36
parameter_list       : 34 36
parameter_type_list  : 31 58
parameter_type_list_opt : 53 54
postfix_expression   : 114 124 125 126 127 128
primary_expression   : 123
relational_expression : 95 96 98 99 100 101
selection_statement  : 61
shift_expression     : 97 98 99 100 101 103 104
specifier_qualifier_list : 25 46
statement            : 69 70 71 72 72 73 74
statement_list       : 65 66 70
translation_unit     : 2 0
type_name            : 113
type_specifier       : 16 17 25 26
unary_expression     : 82 112 115 116
unary_operator       : 117

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) external_declaration -> . INCLUDE LT ID include_endings
    (8) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (9) function_definition -> . declarator declaration_list compound_statement
    (10) function_definition -> . declarator compound_statement
    (11) function_definition -> . declaration_specifiers declarator compound_statement
    (12) declaration -> . declaration_specifiers init_declarator_list SEMI
    (13) declaration -> . declaration_specifiers SEMI
    (16) declaration_specifiers -> . type_specifier declaration_specifiers
    (17) declaration_specifiers -> . type_specifier
    (27) declarator -> . direct_declarator
    (18) type_specifier -> . VOID
    (19) type_specifier -> . INT
    (20) type_specifier -> . TYPEID
    (28) direct_declarator -> . ID
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (33) direct_declarator -> . direct_declarator LPAREN RPAREN

    INCLUDE         shift and go to state 5
    VOID            shift and go to state 11
    INT             shift and go to state 12
    TYPEID          shift and go to state 13
    ID              shift and go to state 6
    LPAREN          shift and go to state 14

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 7
    declarator                     shift and go to state 8
    type_specifier                 shift and go to state 9
    direct_declarator              shift and go to state 10

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) external_declaration -> . INCLUDE LT ID include_endings
    (8) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (9) function_definition -> . declarator declaration_list compound_statement
    (10) function_definition -> . declarator compound_statement
    (11) function_definition -> . declaration_specifiers declarator compound_statement
    (12) declaration -> . declaration_specifiers init_declarator_list SEMI
    (13) declaration -> . declaration_specifiers SEMI
    (16) declaration_specifiers -> . type_specifier declaration_specifiers
    (17) declaration_specifiers -> . type_specifier
    (27) declarator -> . direct_declarator
    (18) type_specifier -> . VOID
    (19) type_specifier -> . INT
    (20) type_specifier -> . TYPEID
    (28) direct_declarator -> . ID
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (33) direct_declarator -> . direct_declarator LPAREN RPAREN

    INCLUDE         shift and go to state 5
    VOID            shift and go to state 11
    INT             shift and go to state 12
    TYPEID          shift and go to state 13
    ID              shift and go to state 6
    LPAREN          shift and go to state 14

    external_declaration           shift and go to state 15
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 7
    declarator                     shift and go to state 8
    type_specifier                 shift and go to state 9
    direct_declarator              shift and go to state 10

state 2

    (1) translation_unit -> external_declaration .

    INCLUDE         reduce using rule 1 (translation_unit -> external_declaration .)
    VOID            reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    TYPEID          reduce using rule 1 (translation_unit -> external_declaration .)
    ID              reduce using rule 1 (translation_unit -> external_declaration .)
    LPAREN          reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    INCLUDE         reduce using rule 3 (external_declaration -> function_definition .)
    VOID            reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    TYPEID          reduce using rule 3 (external_declaration -> function_definition .)
    ID              reduce using rule 3 (external_declaration -> function_definition .)
    LPAREN          reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    INCLUDE         reduce using rule 4 (external_declaration -> declaration .)
    VOID            reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    TYPEID          reduce using rule 4 (external_declaration -> declaration .)
    ID              reduce using rule 4 (external_declaration -> declaration .)
    LPAREN          reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) external_declaration -> INCLUDE . LT ID include_endings

    LT              shift and go to state 16


state 6

    (28) direct_declarator -> ID .

    LBRACKET        reduce using rule 28 (direct_declarator -> ID .)
    LPAREN          reduce using rule 28 (direct_declarator -> ID .)
    LBRACE          reduce using rule 28 (direct_declarator -> ID .)
    VOID            reduce using rule 28 (direct_declarator -> ID .)
    INT             reduce using rule 28 (direct_declarator -> ID .)
    TYPEID          reduce using rule 28 (direct_declarator -> ID .)
    EQUALS          reduce using rule 28 (direct_declarator -> ID .)
    SEMI            reduce using rule 28 (direct_declarator -> ID .)
    COMMA           reduce using rule 28 (direct_declarator -> ID .)
    RPAREN          reduce using rule 28 (direct_declarator -> ID .)


state 7

    (8) function_definition -> declaration_specifiers . declarator declaration_list compound_statement
    (11) function_definition -> declaration_specifiers . declarator compound_statement
    (12) declaration -> declaration_specifiers . init_declarator_list SEMI
    (13) declaration -> declaration_specifiers . SEMI
    (27) declarator -> . direct_declarator
    (21) init_declarator_list -> . init_declarator
    (22) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (28) direct_declarator -> . ID
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (33) direct_declarator -> . direct_declarator LPAREN RPAREN
    (23) init_declarator -> . declarator
    (24) init_declarator -> . declarator EQUALS initializer

    SEMI            shift and go to state 19
    ID              shift and go to state 6
    LPAREN          shift and go to state 14

    declarator                     shift and go to state 17
    init_declarator_list           shift and go to state 18
    direct_declarator              shift and go to state 10
    init_declarator                shift and go to state 20

state 8

    (9) function_definition -> declarator . declaration_list compound_statement
    (10) function_definition -> declarator . compound_statement
    (14) declaration_list -> . declaration
    (15) declaration_list -> . declaration_list declaration
    (65) compound_statement -> . LBRACE declaration_list statement_list RBRACE
    (66) compound_statement -> . LBRACE statement_list RBRACE
    (67) compound_statement -> . LBRACE declaration_list RBRACE
    (68) compound_statement -> . LBRACE RBRACE
    (12) declaration -> . declaration_specifiers init_declarator_list SEMI
    (13) declaration -> . declaration_specifiers SEMI
    (16) declaration_specifiers -> . type_specifier declaration_specifiers
    (17) declaration_specifiers -> . type_specifier
    (18) type_specifier -> . VOID
    (19) type_specifier -> . INT
    (20) type_specifier -> . TYPEID

    LBRACE          shift and go to state 24
    VOID            shift and go to state 11
    INT             shift and go to state 12
    TYPEID          shift and go to state 13

    declaration_list               shift and go to state 21
    compound_statement             shift and go to state 22
    declaration                    shift and go to state 23
    declaration_specifiers         shift and go to state 25
    type_specifier                 shift and go to state 9

state 9

    (16) declaration_specifiers -> type_specifier . declaration_specifiers
    (17) declaration_specifiers -> type_specifier .
    (16) declaration_specifiers -> . type_specifier declaration_specifiers
    (17) declaration_specifiers -> . type_specifier
    (18) type_specifier -> . VOID
    (19) type_specifier -> . INT
    (20) type_specifier -> . TYPEID

    SEMI            reduce using rule 17 (declaration_specifiers -> type_specifier .)
    ID              reduce using rule 17 (declaration_specifiers -> type_specifier .)
    LPAREN          reduce using rule 17 (declaration_specifiers -> type_specifier .)
    LBRACKET        reduce using rule 17 (declaration_specifiers -> type_specifier .)
    COMMA           reduce using rule 17 (declaration_specifiers -> type_specifier .)
    RPAREN          reduce using rule 17 (declaration_specifiers -> type_specifier .)
    VOID            shift and go to state 11
    INT             shift and go to state 12
    TYPEID          shift and go to state 13

    type_specifier                 shift and go to state 9
    declaration_specifiers         shift and go to state 26

state 10

    (27) declarator -> direct_declarator .
    (30) direct_declarator -> direct_declarator . LBRACKET constant_expression_opt RBRACKET
    (31) direct_declarator -> direct_declarator . LPAREN parameter_type_list RPAREN
    (32) direct_declarator -> direct_declarator . LPAREN identifier_list RPAREN
    (33) direct_declarator -> direct_declarator . LPAREN RPAREN

    LBRACE          reduce using rule 27 (declarator -> direct_declarator .)
    VOID            reduce using rule 27 (declarator -> direct_declarator .)
    INT             reduce using rule 27 (declarator -> direct_declarator .)
    TYPEID          reduce using rule 27 (declarator -> direct_declarator .)
    EQUALS          reduce using rule 27 (declarator -> direct_declarator .)
    SEMI            reduce using rule 27 (declarator -> direct_declarator .)
    COMMA           reduce using rule 27 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 27 (declarator -> direct_declarator .)
    LBRACKET        shift and go to state 27
    LPAREN          shift and go to state 28


state 11

    (18) type_specifier -> VOID .

    VOID            reduce using rule 18 (type_specifier -> VOID .)
    INT             reduce using rule 18 (type_specifier -> VOID .)
    TYPEID          reduce using rule 18 (type_specifier -> VOID .)
    SEMI            reduce using rule 18 (type_specifier -> VOID .)
    ID              reduce using rule 18 (type_specifier -> VOID .)
    LPAREN          reduce using rule 18 (type_specifier -> VOID .)
    LBRACKET        reduce using rule 18 (type_specifier -> VOID .)
    COMMA           reduce using rule 18 (type_specifier -> VOID .)
    RPAREN          reduce using rule 18 (type_specifier -> VOID .)


state 12

    (19) type_specifier -> INT .

    VOID            reduce using rule 19 (type_specifier -> INT .)
    INT             reduce using rule 19 (type_specifier -> INT .)
    TYPEID          reduce using rule 19 (type_specifier -> INT .)
    SEMI            reduce using rule 19 (type_specifier -> INT .)
    ID              reduce using rule 19 (type_specifier -> INT .)
    LPAREN          reduce using rule 19 (type_specifier -> INT .)
    LBRACKET        reduce using rule 19 (type_specifier -> INT .)
    COMMA           reduce using rule 19 (type_specifier -> INT .)
    RPAREN          reduce using rule 19 (type_specifier -> INT .)


state 13

    (20) type_specifier -> TYPEID .

    VOID            reduce using rule 20 (type_specifier -> TYPEID .)
    INT             reduce using rule 20 (type_specifier -> TYPEID .)
    TYPEID          reduce using rule 20 (type_specifier -> TYPEID .)
    SEMI            reduce using rule 20 (type_specifier -> TYPEID .)
    ID              reduce using rule 20 (type_specifier -> TYPEID .)
    LPAREN          reduce using rule 20 (type_specifier -> TYPEID .)
    LBRACKET        reduce using rule 20 (type_specifier -> TYPEID .)
    COMMA           reduce using rule 20 (type_specifier -> TYPEID .)
    RPAREN          reduce using rule 20 (type_specifier -> TYPEID .)


state 14

    (29) direct_declarator -> LPAREN . declarator RPAREN
    (27) declarator -> . direct_declarator
    (28) direct_declarator -> . ID
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (33) direct_declarator -> . direct_declarator LPAREN RPAREN

    ID              shift and go to state 6
    LPAREN          shift and go to state 14

    declarator                     shift and go to state 29
    direct_declarator              shift and go to state 10

state 15

    (2) translation_unit -> translation_unit external_declaration .

    INCLUDE         reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    VOID            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    TYPEID          reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    ID              reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    LPAREN          reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    $end            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)


state 16

    (5) external_declaration -> INCLUDE LT . ID include_endings

    ID              shift and go to state 30


state 17

    (8) function_definition -> declaration_specifiers declarator . declaration_list compound_statement
    (11) function_definition -> declaration_specifiers declarator . compound_statement
    (23) init_declarator -> declarator .
    (24) init_declarator -> declarator . EQUALS initializer
    (14) declaration_list -> . declaration
    (15) declaration_list -> . declaration_list declaration
    (65) compound_statement -> . LBRACE declaration_list statement_list RBRACE
    (66) compound_statement -> . LBRACE statement_list RBRACE
    (67) compound_statement -> . LBRACE declaration_list RBRACE
    (68) compound_statement -> . LBRACE RBRACE
    (12) declaration -> . declaration_specifiers init_declarator_list SEMI
    (13) declaration -> . declaration_specifiers SEMI
    (16) declaration_specifiers -> . type_specifier declaration_specifiers
    (17) declaration_specifiers -> . type_specifier
    (18) type_specifier -> . VOID
    (19) type_specifier -> . INT
    (20) type_specifier -> . TYPEID

    SEMI            reduce using rule 23 (init_declarator -> declarator .)
    COMMA           reduce using rule 23 (init_declarator -> declarator .)
    EQUALS          shift and go to state 33
    LBRACE          shift and go to state 24
    VOID            shift and go to state 11
    INT             shift and go to state 12
    TYPEID          shift and go to state 13

    declaration_specifiers         shift and go to state 25
    declaration_list               shift and go to state 31
    compound_statement             shift and go to state 32
    declaration                    shift and go to state 23
    type_specifier                 shift and go to state 9

state 18

    (12) declaration -> declaration_specifiers init_declarator_list . SEMI
    (22) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            shift and go to state 34
    COMMA           shift and go to state 35


state 19

    (13) declaration -> declaration_specifiers SEMI .

    INCLUDE         reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    VOID            reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    INT             reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    TYPEID          reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    ID              reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    LPAREN          reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    $end            reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    LBRACE          reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    RBRACE          reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    IF              reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    WHILE           reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    FOR             reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    BREAK           reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    RETURN          reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    PLUSPLUS        reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    MINUSMINUS      reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    AND             reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    TIMES           reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    PLUS            reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    MINUS           reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    LNOT            reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    SCONST          reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    ICONST          reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    FCONST          reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    CCONST          reduce using rule 13 (declaration -> declaration_specifiers SEMI .)
    SEMI            reduce using rule 13 (declaration -> declaration_specifiers SEMI .)


state 20

    (21) init_declarator_list -> init_declarator .

    SEMI            reduce using rule 21 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 21 (init_declarator_list -> init_declarator .)


state 21

    (9) function_definition -> declarator declaration_list . compound_statement
    (15) declaration_list -> declaration_list . declaration
    (65) compound_statement -> . LBRACE declaration_list statement_list RBRACE
    (66) compound_statement -> . LBRACE statement_list RBRACE
    (67) compound_statement -> . LBRACE declaration_list RBRACE
    (68) compound_statement -> . LBRACE RBRACE
    (12) declaration -> . declaration_specifiers init_declarator_list SEMI
    (13) declaration -> . declaration_specifiers SEMI
    (16) declaration_specifiers -> . type_specifier declaration_specifiers
    (17) declaration_specifiers -> . type_specifier
    (18) type_specifier -> . VOID
    (19) type_specifier -> . INT
    (20) type_specifier -> . TYPEID

    LBRACE          shift and go to state 24
    VOID            shift and go to state 11
    INT             shift and go to state 12
    TYPEID          shift and go to state 13

    compound_statement             shift and go to state 36
    declaration                    shift and go to state 37
    declaration_specifiers         shift and go to state 25
    type_specifier                 shift and go to state 9

state 22

    (10) function_definition -> declarator compound_statement .

    INCLUDE         reduce using rule 10 (function_definition -> declarator compound_statement .)
    VOID            reduce using rule 10 (function_definition -> declarator compound_statement .)
    INT             reduce using rule 10 (function_definition -> declarator compound_statement .)
    TYPEID          reduce using rule 10 (function_definition -> declarator compound_statement .)
    ID              reduce using rule 10 (function_definition -> declarator compound_statement .)
    LPAREN          reduce using rule 10 (function_definition -> declarator compound_statement .)
    $end            reduce using rule 10 (function_definition -> declarator compound_statement .)


state 23

    (14) declaration_list -> declaration .

    LBRACE          reduce using rule 14 (declaration_list -> declaration .)
    VOID            reduce using rule 14 (declaration_list -> declaration .)
    INT             reduce using rule 14 (declaration_list -> declaration .)
    TYPEID          reduce using rule 14 (declaration_list -> declaration .)
    RBRACE          reduce using rule 14 (declaration_list -> declaration .)
    IF              reduce using rule 14 (declaration_list -> declaration .)
    WHILE           reduce using rule 14 (declaration_list -> declaration .)
    FOR             reduce using rule 14 (declaration_list -> declaration .)
    BREAK           reduce using rule 14 (declaration_list -> declaration .)
    RETURN          reduce using rule 14 (declaration_list -> declaration .)
    PLUSPLUS        reduce using rule 14 (declaration_list -> declaration .)
    MINUSMINUS      reduce using rule 14 (declaration_list -> declaration .)
    AND             reduce using rule 14 (declaration_list -> declaration .)
    TIMES           reduce using rule 14 (declaration_list -> declaration .)
    PLUS            reduce using rule 14 (declaration_list -> declaration .)
    MINUS           reduce using rule 14 (declaration_list -> declaration .)
    LNOT            reduce using rule 14 (declaration_list -> declaration .)
    SCONST          reduce using rule 14 (declaration_list -> declaration .)
    ID              reduce using rule 14 (declaration_list -> declaration .)
    LPAREN          reduce using rule 14 (declaration_list -> declaration .)
    ICONST          reduce using rule 14 (declaration_list -> declaration .)
    FCONST          reduce using rule 14 (declaration_list -> declaration .)
    CCONST          reduce using rule 14 (declaration_list -> declaration .)
    SEMI            reduce using rule 14 (declaration_list -> declaration .)


state 24
